--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,12 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+#app, html, body{
     height: 100%;
-}
-
-body {
-    min-height: 100%;
 }
 
 .border-site-color{
